fixing alignment

--- a/style.css
+++ b/style.css
@@ -10,9 +10,7 @@ a {
     color: #3a0869;
 }
 #indexpagebox {
-    padding: 1em;
-    margin: 1em;
-}
+    padding: 1em;}
 .border-dark {
     margin: 0.5em;
 }
